<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="#789"
        android:text=""
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="#770099"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_goneMarginTop="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#fff"
            android:gravity="center">

            <Button
                android:id="@+id/btn_007"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="showButtonContent"
                android:text="@string/btn_seven"
                android:textSize="60sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_008"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="showButtonContent"
                android:text="@string/btn_eight"
                android:textSize="60sp" />

            <Button
                android:id="@+id/btn_009"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="showButtonContent"
                android:text="@string/btn_nine"
                android:textSize="60sp" />

            <Button
                android:id="@+id/btn_del"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_del"
                android:onClick="showButtonContent"
                android:textSize="30sp"/>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn_004"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="showButtonContent"
                android:text="@string/btn_four"
                android:textSize="60sp"/>

            <Button
                android:id="@+id/btn_005"

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="showButtonContent"
                android:text="@string/btn_five"

                android:textSize="60sp"/>

            <Button
                android:id="@+id/btn_006"
                android:layout_width="0dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="showButtonContent"
                android:text="@string/btn_six"
                android:textSize="60sp"/>

            <Button
                android:id="@+id/btn_div"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="showButtonContent"
                android:text="/"
                android:textSize="60sp"/>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn_001"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="showButtonContent"
                android:text="@string/btn_one"
                android:textSize="60sp"/>

            <Button
                android:id="@+id/btn_002"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="showButtonContent"
                android:text="@string/btn_two"
                android:textSize="60sp"/>

            <Button
                android:id="@+id/btn_003"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="showButtonContent"
                android:text="@string/btn_three"
                android:textSize="60sp"/>

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_minus"
                android:textSize="60sp" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn_multiple"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="*"
                android:textSize="60sp"/>

            <Button
                android:id="@+id/btn_000"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_zero"
                android:onClick="showButtonContent"
                android:textSize="60sp"/>

            <Button
                android:id="@+id/btn_equ"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="="
                android:onClick="showButtonContent"
                android:textSize="60sp"/>

            <Button
                android:id="@+id/btn_add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="+"
                android:onClick="showButtonContent"
                android:textSize="60sp"/>
        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>